--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,7 +12,7 @@ amazon:
   access_key_id: 
   secret_access_key: 
   region: us-east-1
-  bucket: apprailshelton
+  bucket: 
 
 mirror:
   service: Mirror
